--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongoose": "^8.10.0",
+    "prettier": "^3.5.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.1",
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "@typescript-eslint/parser": "^8.23.0",
+    "eslint": "^9.20.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
