--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "tsc",
         "start": "node dist/index.js",
         "dev": "tsc && node --watch dist/index.js",
-        "watch": "tsc --watch"
+        "watch": "tsc --watch",
+        "gen-default-users": "tsc && node dist/scripts/seedUsers.js"
     },
     "keywords": [],
     "author": "",
